# Projet_12_Epic_Events

./: .env  .envrc  .gitignore  CHANGELOG.md  Dockerfile  README.md  init_base.py  login.py  main.py  pyproject.toml  raz_db.py  verify_token.py
.utils/: commit.sh
app/: .env  init_base.py  main.py
app/controllers/: authentication.py  contract_manage.py  customer_manage.py  employee_manage.py  event_manage.py  menu_manage.py  role_manage.py  utils_manage.py
app/data/: token.json
app/dev/: init_db.py  raz_db.py
app/models/: contract.py  customer.py  database.py  employee.py  event.py  role.py
app/permissions/: permissions.py
app/tests/: __init__.py  _test_contract_manage.py  test_models.py
app/tests/integration_tests/: test_models.py
app/tests/unit_tests/: _test_contract_manage.py  _test_role_manage.py  test_contract_manage.py  test_customer_manage.py  (+11 more)
app/utils/: logger_config.py  logging_config.py  sentry_logger.py  token_manage_json.py
app/views/: views.py
docs/Scripts_tests/: test.sql  test_sqlalchemy_mysql.py  test_sqlalchemy_sqlite.py
epic_events/: models.py
epic_events/controllers/: authentication.py  contract_manage.py  customer_manage.py  employee_manage.py  event_manage.py  menu_manage.py  role_manage.py
epic_events/data/: token.json
epic_events/dev/: raz_db.py
epic_events/models/: contract.py  customer.py  database.py  employee.py  event.py  role.py
epic_events/permissions/: permissions.py
epic_events/tests/: __init__.py  test_models.py
epic_events/utils/: token_manage_json.py
epic_events/views/: base.py  views.py
